WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17213
The querySelectorAll method on an element node does not search only the element's descendants
https://bugs.webkit.org/show_bug.cgi?id=17213
Summary
The querySelectorAll method on an element node does not search only the eleme...
Andrew Dupont
Reported
2008-02-07 22:03:10 PST
From the W3C Selectors API draft: "The querySelectorAll() methods on the ElementSelector interface must, when invoked, return a StaticNodeList of all the Element nodes, in document order, that are descendants of the element on which the method was invoked and matches the group of selectors (selectors), if any. Otherwise it must return an empty StaticNodeList." The testcase shows that anyElement.querySelectorAll always behaves like document.querySelectorAll — it'll search document-wide. This is incorrect.
Attachments
patch
(6.18 KB, patch)
2008-02-08 11:57 PST
,
Sam Weinig
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2008-02-08 11:57:36 PST
Created
attachment 19006
[details]
patch
Sam Weinig
Comment 2
2008-02-08 11:58:33 PST
<
rdar://problem/5732491
>
Dave Hyatt
Comment 3
2008-02-08 12:00:23 PST
Comment on
attachment 19006
[details]
patch r=me
Sam Weinig
Comment 4
2008-02-08 12:22:03 PST
Fixed in
r30096
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug