WebCore:

Reviewed by Hyatt.

        Fix for <rdar://problem/5732491>
        http://bugs.webkit.org/show_bug.cgi?id=17213
        The querySelectorAll method on an element node does not search only the element's descendants

        Test: fast/dom/SelectorAPI/elementRoot.html

        * dom/Node.cpp:
        (WebCore::Node::querySelector): Make sure to stay within the root node when traversing the tree.
        * dom/SelectorNodeList.cpp:
        (WebCore::SelectorNodeList::SelectorNodeList): ditto.

LayoutTests:

        Reviewed by Hyatt.

        Test for <rdar://problem/5732491>
        http://bugs.webkit.org/show_bug.cgi?id=17213
        The querySelectorAll method on an element node does not search only the element's descendants

        * fast/dom/SelectorAPI/elementRoot-expected.txt: Added.
        * fast/dom/SelectorAPI/elementRoot.html: Added.
        * fast/dom/SelectorAPI/resources: Added.
        * fast/dom/SelectorAPI/resources/TEMPLATE.html: Copied from LayoutTests/fast/js/resources/TEMPLATE.html.
        * fast/dom/SelectorAPI/resources/elementRoot.js: Added.



Canonical link: https://commits.webkit.org/23907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30096 268f45cc-cd09-0410-ab3c-d52691b4dbfc